deploy/kube/mutatingWebhookConfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: mutate-example-admission-controller
webhooks:
  - name: mutating-webhook.openpolicyagent.org
    clientConfig:
      service:
        name: mutate-example
        namespace: demo-mutate
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUN3ekNDQW1xZ0F3SUJBZ0lRSVZLL2Q4SE9qRjNlcXI1TldFM0xSVEFLQmdncWhrak9QUVFEQWpBak1TRXcKSHdZRFZRUUREQmhyTTNNdFkyeHBaVzUwTFdOaFFERTJNVGd5TkRJek16UXdIaGNOTWpFd05ERXlNVGt4TWpJeQpXaGNOTWpJd05ERXlNVGt4TWpJeVdqQXBNU2N3SlFZRFZRUURFeDV0ZFhSaGRHVXRaWGhoYlhCc1pTNWtaVzF2CkxXMTFkR0YwWlM1emRtTXdnZ0VpTUEwR0NTcUdTSWIzRFFFQkFRVUFBNElCRHdBd2dnRUtBb0lCQVFDK2ZLK3AKdUFyQ0E5akxhcDFBVUN6VTFaVTlza0ZiK29KMi9naktyMS9WS0JibVVkcnRNSW9jRThqS1pRUzBBWUVNRU5VRApmRURSMXFRN05R [...]
    rules:
      - operations: ["*"]
        apiGroups: ["*"]
        apiVersions: ["*"]
        resources: ["*"]
